[package]
name = "calleen"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Alex Hansen <alex@alex-hansen.com>"]
description = "Robust HTTP request library for those who don't like getting unnecessarily paged while on-call."
repository = "https://github.com/sezna/calleen"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["time"] }
http = "1.0"
rand = "0.8"
url = "2.5"
httpdate = "1.0"
base64 = "0.22"

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
